<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_base">

    <ImageView
        android:id="@+id/menu_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_menu" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_menu_scrim"
        android:importantForAccessibility="no" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/menu_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_header_bar"
            android:gravity="center_vertical"
            android:minHeight="@dimen/header_height"
            android:orientation="horizontal"
            android:paddingStart="@dimen/screen_margin"
            android:paddingTop="@dimen/header_status_padding"
            android:paddingEnd="@dimen/screen_margin"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/menu_brand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:letterSpacing="0.12"
                android:maxLines="2"
                android:text="@string/menu_brand"
                android:textAllCaps="true"
                android:textColor="@color/text_primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.NqXkLmR.vJpTzF.core.ui.StatCardView
                android:id="@+id/menu_header_best"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/stat_card_height_compact"
                android:layout_marginStart="12dp"
                android:visibility="gone"
                app:statAccentColor="@color/accent_amber"
                app:statCompact="true"
                app:statLabel="@string/stat_best" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/menu_hero_tile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/bento_gap"
            android:layout_marginEnd="@dimen/screen_margin"
            app:layout_constraintBottom_toTopOf="@id/menu_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="@dimen/menu_hero_height_max"
            app:layout_constraintHeight_min="@dimen/menu_hero_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menu_header"
            app:layout_constraintVertical_bias="0">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/hard_shadow_offset"
                android:layout_marginTop="@dimen/hard_shadow_offset"
                android:background="@drawable/brutal_shadow_dark"
                android:importantForAccessibility="no" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/hard_shadow_offset"
                android:layout_marginBottom="@dimen/hard_shadow_offset"
                android:background="@drawable/brutal_block_amber">

                <ImageView
                    android:id="@+id/menu_hero_sprite"
                    android:layout_width="@dimen/menu_hero_sprite"
                    android:layout_height="@dimen/menu_hero_sprite"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/menu_hero_sprite_desc"
                    android:scaleType="fitCenter"
                    android:src="@drawable/sprite_chiko_hero" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="18dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/menu_hero_line_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_hero_line_one"
                        android:textAppearance="@style/TextAppearance.App.Headline" />

                    <TextView
                        android:id="@+id/menu_hero_line_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_hero_line_two"
                        android:textAppearance="@style/TextAppearance.App.Headline"
                        android:textColor="@color/accent_amber" />

                    <View
                        android:layout_width="72dp"
                        android:layout_height="4dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rule_amber"
                        android:importantForAccessibility="no" />

                </LinearLayout>

            </FrameLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/menu_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="@dimen/screen_margin"
            android:layout_marginBottom="@dimen/bento_gap"
            android:letterSpacing="0.16"
            android:text="@string/menu_hint"
            android:textAllCaps="true"
            android:textColor="@color/text_secondary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/menu_play_row"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/menu_play_row"
            android:layout_width="0dp"
            android:layout_height="@dimen/menu_play_height"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/menu_stats_row"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/hard_shadow_offset"
                    android:layout_marginTop="@dimen/hard_shadow_offset"
                    android:background="@drawable/brutal_shadow_coral"
                    android:importantForAccessibility="no" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/menu_play"
                    style="@style/Widget.App.Button.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/hard_shadow_offset"
                    android:layout_marginBottom="@dimen/hard_shadow_offset"
                    android:text="@string/menu_play"
                    android:textSize="28sp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/bento_gap"
                android:layout_weight="1">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/hard_shadow_offset"
                    android:layout_marginTop="@dimen/hard_shadow_offset"
                    android:background="@drawable/brutal_shadow_cyan"
                    android:importantForAccessibility="no" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/menu_shift"
                    style="@style/Widget.App.Button.Tile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/hard_shadow_offset"
                    android:layout_marginBottom="@dimen/hard_shadow_offset" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_stats_row"
            android:layout_width="0dp"
            android:layout_height="@dimen/stat_card_height"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/bento_gap"
            android:layout_marginEnd="@dimen/screen_margin"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/menu_tutorial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.NqXkLmR.vJpTzF.core.ui.StatCardView
                android:id="@+id/menu_stat_best"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:statAccentColor="@color/accent_amber"
                app:statLabel="@string/stat_best" />

            <com.NqXkLmR.vJpTzF.core.ui.StatCardView
                android:id="@+id/menu_stat_accuracy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/bento_gap"
                android:layout_weight="1"
                app:statAccentColor="@color/accent_cyan"
                app:statLabel="@string/stat_accuracy" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_tutorial"
            style="@style/Widget.App.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/menu_secondary_height"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/bento_gap"
            android:layout_marginEnd="@dimen/screen_margin"
            android:layout_marginBottom="40dp"
            android:text="@string/menu_tutorial"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
